Fix overlap between footer and event occurrences when there are a lot of event occurrences

--- a/news/static/news/css/article.css
+++ b/news/static/news/css/article.css
@@ -61,7 +61,8 @@ a.place {
 }
 
 .rail-content {
-    padding-top: 17px !important;
+    padding-top: 17px;
+    padding-bottom: 17px;
 }
 
 .event.article {
